--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "dependencies": {
     "interactjs":"^1.3.4",
     "atom-package-deps": "^4.6.2",
-    "etch": "^0.14.0"
+    "etch": "^0.14.0",
+    "temp-write": "^3.4.0"
   },
   "package-deps": [
     "lilycompile",
