--- a/package.json
+++ b/package.json
@@ -5,9 +5,6 @@
   "description": "A short description of your package",
   "keywords": [
   ],
-  "activationCommands": {
-    "atom-workspace": "lilyformalist:toggle"
-  },
   "deserializers": {
     "lilyformalist/LilyFormalistView": "deserializeLilyFormalistView"
   },
@@ -16,14 +13,22 @@
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
   },
+  "consumedServices": {
+  "lilycompile": {
+    "description": "renders editor's filepath from .ly to .pdf file in new editor pane",
+    "versions": {
+      "0.7.0": "consumeCompile"
+    }
+  }
+},
   "dependencies": {
     "interactjs":"^1.3.4",
     "atom-package-deps": "^4.6.2",
     "etch": "^0.14.0",
-    "temp-write": "^3.4.0"
+    "temp-write": "^3.4.0",
+    "copyfiles": "^2.0.0"
   },
   "package-deps": [
-    "lilycompile",
-    "atom-live-server"
+    "lilycompile"
   ]
 }
