--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
 },
   "dependencies": {
     "interactjs":"^1.3.4",
+    "react-interactjs-wrapper":"^0.1.7",
     "atom-package-deps": "^4.6.2",
     "etch": "^0.14.0",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
     "temp-write": "^3.4.0",
     "copyfiles": "^2.0.0"
   },
