--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "interactjs":"^1.3.4",
     "react-interactjs-wrapper":"^0.1.7",
     "atom-package-deps": "^4.6.2",
-    "etch": "^0.14.0"
+    "etch": "^0.14.0",
+    "temp-write":"^3.4.0"
   },
   "package-deps": [
     "lilycompile"
