--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
 },
   "dependencies": {
     "interactjs":"^1.3.4",
+    "react":"^16.4.1",
+    "react-dom":"^16.4.1",
     "react-interactjs-wrapper":"^0.1.7",
     "atom-package-deps": "^4.6.2",
     "etch": "^0.14.0",
-    "temp-write":"^3.4.0"
+    "temp-write":"^3.4.0",
+    "react-sortable":"^2.0.0"
   },
   "package-deps": [
     "lilycompile"
