--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
   },
+  "activationCommands": {
+    "atom-workspace": "lilyformalist:toggle"
+  },
   "consumedServices": {
   "lilycompile": {
     "description": "renders editor's filepath from .ly to .pdf file in new editor pane",
@@ -17,6 +20,9 @@
       "0.7.0": "consumeCompile"
     }
   }
+},
+"deserializers": {
+  "active-editor-info/ActiveEditorInfoView": "deserializeActiveEditorInfoView"
 },
   "dependencies": {
     "interactjs":"^1.3.4",
